* Version checker shouldn't give error on timeout. * Shops should get registered on chest closed and transactions. * Shop stock gets updated on chest closed/transactions.

--- a/config.yml
+++ b/config.yml
@@ -23,6 +23,9 @@ properties:
   # Auto add shop upon creation to our database.
   auto-register: true
   
+  #Decimal places to round prices.
+  price-rounding: 2
+  
 # MySQL DB info.
 mysql:
   hostname: localhost
