* Version to 0.4.0 * Adding missing permission check on commands. * Added some comments to config.

--- a/config.yml
+++ b/config.yml
@@ -35,6 +35,7 @@ properties:
   # If a shop owner has multiple shops for the same item, show only one.
   one-owner-per-results: true
   
+  # Name of your admin shop, to bypass our supply/balance check.
   admin-shop: "Admin Shop"
   
 # MySQL DB info.
