--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,9 @@ properties:
   # Number of shops to display in the search/buy/sell commands.
   search-results: 5
   
+  # Number of results to show in the transactions commands. 
+  transaction-results: 10
+  
   # If a shop owner has multiple shops for the same item, show only one.
   one-owner-per-results: true
   
